[package]
name = "relevation"
version = "0.1.0"
authors = ["angelodlfrtr"]
edition = "2018"

[[bin]]
name = "relevation"
path = "src/main.rs"

[dependencies]
gdal = "0.11.0"
rstar = "0.8.3"
clap = "3.0.0-beta.2"
walkdir = "2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.8.0"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
prost = "0.9.0"
tonic = "0.6.2"
log = "0.4.0"
env_logger = "0.8.4"
lru = "0.7.0"

[build-dependencies]
tonic-build = "0.6.2"
